graph base class

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Algorithms and Data Structures in Javascript</title>
 </head>
+<style>
+  /* Make default white background darker cause I am a vampire */
+  body {
+    width: 100vw;
+    height: 100vh;
+    background: url('https://media.licdn.com/dms/image/C5612AQEpJJAnb_6Piw/article-cover_image-shrink_600_2000/0?e=1562803200&v=beta&t=Ob3L_gvFMexmX9PkHM052XT1NBU5rRG33NznB-e826o');
+  }
+</style>
 <body>
   
   <!-- In order to run this I use Parcel -->
